# E3SM

components/eam/src/physics/cam/: cam_diagnostics.F90  physpkg.F90
components/eamxx/cime_config/: namelist_defaults_scream.xml
components/eamxx/src/mct_coupling/: CMakeLists.txt
components/eamxx/src/physics/: CMakeLists.txt  register_physics.hpp
components/eamxx/src/physics/tutorial/: CMakeLists.txt  eamxx_tutorial_process_interface.cpp  eamxx_tutorial_process_interface.hpp  test_mustpass.cpp  tutorial.cpp  tutorial_functions.hpp  tutorial_main_impl.hpp  tutorial_tests.cpp
components/eamxx/src/physics/tutorial/stand_alone_tests/: CMakeLists.txt  input.yaml  output.yaml
